src/styles/settings.css
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

input[type="number"], input[type="time"]{
  height: 22px;
  line-height: 22px !important;
  vertical-align: middle;
  padding: 0 0 0 10px !important;
  margin-left: 10px !important;
  max-width: 90px;
  border: 1px solid rgb(191, 191, 191);
  border-radius: 2px;
}

input[type="number"] {
  width: 50px;
}

.container {
  width: 800px;
  margin: 20px 15px 0px;
  padding: 0;
  color: #505050!important;
  float: left;
  min-height: 380px;
  max-height: 400px;
  overflow: hidden;
}

.list {
  width: 800px;
  padding: 0;
  list-style: none;
  float: left;
  overflow-y: auto;
  margin-bottom: 40px;
}

.list li {
  min-height: 40px;
}

.list li #nag-nanny:checked ~ div {
  height: 110px
}

.list li #pomodoro-mode:checked ~ div {
  height: 200px;
}

.list li #stop-at-day-end:checked ~ div{
  height:70px;
}

.list li label {
  font-size: 14px;
  height: 22px;
  line-height: 22px;
  vertical-align: middle;
}

.list li input[type="checkbox"]{
  height: 1.3em;
  width: 1.3em;
  margin: 0px 0.4em 0.3em 0px;
}

.subsettings-details  {
  overflow: hidden;
  height: 0px;
  margin-left: 10px;
  transition:height 300ms ease-in-out;
}

.subsettings-details p {
  float: left;
  padding-right: 30px;
}

.subsettings-details p:last-child {
  float: none;
  clear: both;
}

.subsettings-details span {
  display: block;
  font-size: 14px;
  padding-top: 10px;
}

.footer {
  padding: 10px 15px;
  min-width: 800px;
  background-color: #f5f5f5;
  border-top: 1px solid #e5e5e5;
  font-size: 12px;
  color: #8A8888;
  float: left;
  position: fixed;
  bottom: 0;
}

.changelog {
  float: right;
  margin: 0;
  padding: 0;
  margin-right: 10px;
}

#version a {
  color: #8A8888!important;
  text-decoration: none;
}

.description {
  border-left: 2px solid #dfdfdf;
  color: rgb(119, 119, 119);
  float: right;
  display: block;
  visibility: hidden;
  padding: 5px;
  width: 50%;
  margin: 0!important;
}

.list li:hover .description {
  visibility: visible;
}

header {
  position: fixed;
  left: 0;
  right: 0;
  background: #ffffff;
  z-index: 100;
}

header ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

header .tab-link {
  background: #fdfdfd;
  cursor: pointer;
  float: left;
  padding: 10px 20px;
}

header .active, header li:hover {
  border-bottom: 1px solid red;
  background: #F1F0F0;
}

.container .tab {
  position: absolute;
  bottom: 42px;
  top: 35px;
  transition:left 300ms ease-in-out;
}

.container .tab-1 {
  left: -830px;
}

.container .tab-2 {
  left: 830px;
}

.container .active {
  left: 15px!important;
}

#default-project {
  margin-left: 5px;
  max-width: 280px;
}

#sound-volume {
  width: 80px;
  margin-left: 20px;
  position: relative;
  top: 4px;
}

#volume-label {
  display: inline-block;
  margin-left: 8px;
  height: 16px;
  width: 40px;
  text-align: right;
  margin-right: 5px;
}

#sound-test {
  position: relative;
  right: -28px;
}

.pomodoro-sound {
  clear: both;
}

.pomodoro-sound-volume {
  overflow: hidden;
  height: 0px;
  transition:height 300ms ease-in-out;
}

#enable-sound-signal:checked ~.pomodoro-sound-volume {
  height: 36px;
}

